# rcutils

./: README.md
catr/: Cargo.toml
catr/src/: lib.rs  main.rs
cutr/: Cargo.toml
cutr/src/: lib.rs  main.rs
cutr/tests/: cli.rs
echor/: Cargo.toml  err
echor/src/: main.rs
echor/tests/: cli.rs
findr/: Cargo.toml
findr/src/: lib.rs  main.rs
findr/tests/: cli.rs
grepr/: Cargo.toml
grepr/src/: lib.rs  main.rs
headr/: Cargo.toml
headr/src/: lib.rs  main.rs
uniqr/: Cargo.toml
uniqr/src/: lib.rs  main.rs
uniqr/tests/: cli.rs
wcr/: '  Cargo.toml
wcr/src/: lib.rs  main.rs
wcr/tests/: cli.rs
