[package]
name = "cutr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.2.16"
assert_cmd = "2.0.4"
csv = "1"
regex = "1"

[dev-dependencies]
assert_cmd = "2.0.4"
predicates = "2.1.1"
rand = "0.8.5"

